--- a/pagenotefound.html
+++ b/pagenotefound.html
@@ -150,9 +150,9 @@
 
     <!-- section -->
 
-    <div class="col-lg-7 text-center p-30px-l img  noteFound" data-aos="fade-left" data-aos-delay="100">
+    <div class="col-lg-7 text-center p-30px-l img  noteFound">
         <img src="img/note found.svg" title="" alt="">
-        <div class="back" data-aos="fade-right" data-aos-delay="100">
+        <div class="back">
             <a href="">kembali</a>
         </div>
     </div>
